[workspace]
members = [
  "_3sum",
  "add-two-numbers",
  "binary-search",
  "first-bad-version",
  "longest-substring-without-repeating-characters",
  "minimum-number-of-moves-to-seat-everyone",
  "palindrome-number",
  "pour-water",
  "search-insert-position",
  "slowest-key",
  "squares-of-a-sorted-array",
  "two-sum",
  "two-sum-ii-input-array-is-sorted",
  "water-bottles",
  "rotate-array",
  "move-zeros",
  "contains-duplicate",
  "maximum-subarray",
  "reverse-string",
  "reverse-words-in-a-string-iii",
  "merge-sorted-array",
  "middle-of-the-linked-list",
  "remove-nth-node-from-end-of-list",
  "intersection-of-two-arrays-ii",
  "permutation-in-string",
  "flood-fill",
]
